--- a/calendar_week.html
+++ b/calendar_week.html
@@ -290,7 +290,7 @@
                             aria-label="July 9, 2022"
                             aria-expanded="false"
                             type="button"
-                            class="_11eqlma4"
+                            class="main_content__agenda-list-btn"
                           >
                             <div class="main_content__header-current_date">
                               <div class="main_content__header-date--today">July 9, 2022</div>
@@ -3170,14 +3170,14 @@
                 <section
                   data-testid="calendar-sidebar"
                   aria-label="Day details and actions"
-                  class="_4vf6nc"
+                  class="main_content__details"
                 >
                   <div
                     id="calendar-sidebar"
                     aria-labelledby="calendar-sidebar-heading"
                     tabindex="-1"
                     aria-live="off"
-                    class="_dxx2an"
+                    class="main_content__details-wrapper"
                   >
                     <section>
                       <div class="color_black">
@@ -3197,7 +3197,7 @@
                           <button
                             data-testid="Cooking Deep Fried Bright Orange Battered Eggs"
                             type="button"
-                            class="_11eqlma4"
+                            class="main_content__agenda-list-btn"
                           >
                             <div class="_1pmsz24">
                               <div class="full__height">
@@ -3276,7 +3276,7 @@
                           <button
                             data-testid="Cooking Deep Fried Bright Orange Battered Eggs"
                             type="button"
-                            class="_11eqlma4"
+                            class="main_content__agenda-list-btn"
                           >
                             <div class="_1pmsz24">
                               <div class="full__height">
@@ -3363,7 +3363,7 @@
                         <section>
                           <div style="margin-top: 32px; margin-bottom: 16px">
                             <div class="_18oyew7">
-                              <div class="_dmn8hc">
+                              <div class="main_content__details-button-wrapper">
                                 <div>
                                   <h2
                                     tabindex="-1"
