--- a/contact-host.html
+++ b/contact-host.html
@@ -2454,7 +2454,7 @@
                                                                 class="flex"
                                                               >
                                                                 <div
-                                                                  class="_bp34sw"
+                                                                  class="main_content__details-form-language"
                                                                 >
                                                                   <div
                                                                     class="relative"
@@ -2491,14 +2491,14 @@
                                                                     >
                                                                       <label
                                                                         for="GuestPicker-book_it-trigger"
-                                                                        class="_13kgb0p"
+                                                                        class="main_content__details-form-language-label"
                                                                         ><div
                                                                           class="_7eq2v2"
                                                                         >
                                                                           Guests
                                                                         </div>
                                                                         <div
-                                                                          class="_1ekxhnk"
+                                                                          class="main_content__details-form-language-value"
                                                                           id="GuestPicker-book_it-trigger"
                                                                           aria-invalid="false"
                                                                           aria-disabled="false"
