--- a/dashboard.html
+++ b/dashboard.html
@@ -568,7 +568,7 @@
           line-height: 20px !important;
         }
       }
-      ._11eqlma4 {
+      .main_content__agenda-list-btn {
         cursor: pointer !important;
         position: relative !important;
         border-color: black !important;
@@ -603,7 +603,7 @@
         height: 100% !important;
         width: 100% !important;
       }
-      ._11eqlma4:focus-visible {
+      .main_content__agenda-list-btn:focus-visible {
         outline: none !important;
         -webkit-transition: box-shadow 0.2s ease !important;
         -moz-transition: box-shadow 0.2s ease !important;
@@ -611,25 +611,25 @@
         box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8),
           0 0 0 4px var(--f-k-smk-x) !important;
       }
-      ._11eqlma4:focus-visible::-moz-focus-inner {
+      .main_content__agenda-list-btn:focus-visible::-moz-focus-inner {
         border: none !important;
         padding: 0 !important;
         margin: 0 !important;
       }
-      ._11eqlma4:focus-visible:focus::-moz-focus-inner {
+      .main_content__agenda-list-btn:focus-visible:focus::-moz-focus-inner {
         border: none !important;
       }
-      ._11eqlma4:focus-visible:-moz-focusring {
+      .main_content__agenda-list-btn:focus-visible:-moz-focusring {
         outline: none !important;
       }
       @media (prefers-reduced-motion: reduce) {
-        ._11eqlma4:focus-visible {
+        .main_content__agenda-list-btn:focus-visible {
           -webkit-transition: none !important;
           -moz-transition: none !important;
           transition: none !important;
         }
       }
-      ._11eqlma4:focus[data-focus-visible-added] {
+      .main_content__agenda-list-btn:focus[data-focus-visible-added] {
         outline: none !important;
         -webkit-transition: box-shadow 0.2s ease !important;
         -moz-transition: box-shadow 0.2s ease !important;
@@ -637,19 +637,19 @@
         box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8),
           0 0 0 4px var(--f-k-smk-x) !important;
       }
-      ._11eqlma4:focus[data-focus-visible-added]::-moz-focus-inner {
+      .main_content__agenda-list-btn:focus[data-focus-visible-added]::-moz-focus-inner {
         border: none !important;
         padding: 0 !important;
         margin: 0 !important;
       }
-      ._11eqlma4:focus[data-focus-visible-added]:focus::-moz-focus-inner {
+      .main_content__agenda-list-btn:focus[data-focus-visible-added]:focus::-moz-focus-inner {
         border: none !important;
       }
-      ._11eqlma4:focus[data-focus-visible-added]:-moz-focusring {
+      .main_content__agenda-list-btn:focus[data-focus-visible-added]:-moz-focusring {
         outline: none !important;
       }
       @media (prefers-reduced-motion: reduce) {
-        ._11eqlma4:focus[data-focus-visible-added] {
+        .main_content__agenda-list-btn:focus[data-focus-visible-added] {
           -webkit-transition: none !important;
           -moz-transition: none !important;
           transition: none !important;
@@ -657,31 +657,31 @@
       }
       @media (hover: hover) {
       }
-      ._11eqlma4:active {
+      .main_content__agenda-list-btn:active {
         -webkit-transform: none !important;
         -ms-transform: none !important;
         transform: none !important;
       }
-      ._11eqlma4:disabled {
+      .main_content__agenda-list-btn:disabled {
         cursor: not-allowed !important;
         opacity: 1 !important;
       }
       @media (prefers-reduced-motion: reduce) {
-        ._11eqlma4 {
+        .main_content__agenda-list-btn {
           -webkit-transition: none !important;
           -moz-transition: none !important;
           transition: none !important;
         }
       }
-      ._11eqlma4::-moz-focus-inner {
+      .main_content__agenda-list-btn::-moz-focus-inner {
         border: none !important;
         padding: 0px !important;
         margin: 0px !important;
       }
-      ._11eqlma4:focus::-moz-focus-inner {
+      .main_content__agenda-list-btn:focus::-moz-focus-inner {
         border: none !important;
       }
-      ._11eqlma4:-moz-focusring {
+      .main_content__agenda-list-btn:-moz-focusring {
         outline: none !important;
       }
       ._1207vr9w {
@@ -2462,7 +2462,7 @@
                 <div class="_10qs2gf">
                   <div class="_1p4o530w">
                     <div class="_3d9x11">
-                      <div class="_dmn8hc">
+                      <div class="main_content__details-button-wrapper">
                         <div class="_i3y2yi" role="heading" aria-level="2">
                           <svg
                             viewBox="0 0 32 32"
@@ -2825,7 +2825,7 @@
                             <span class="_5vallt">Upcoming experiences</span>
                           </div>
                           <div>
-                            <button type="button" class="_11eqlma4">
+                            <button type="button" class="main_content__agenda-list-btn">
                               <span class="_ucfrq6"
                                 ><span class="_f3hihk">Show all</span
                                 ><svg
@@ -2851,7 +2851,7 @@
                         <button
                           aria-label="Today · Start time: 11:00 PM, End time: 11:30 PM Philippines Time Cooking Deep Fried Bright Orange Battered Eggs. No guests yet. 0 seats • Hosted by Jose Angelo • Private (hidden) • English. "
                           type="button"
-                          class="_11eqlma4"
+                          class="main_content__agenda-list-btn"
                         >
                           <div class="_1m5qrpa">
                             <div class="_dzx88q">
@@ -2922,7 +2922,7 @@
                           </div>
                         </button>
                       </div>
-                      <button type="button" class="_11eqlma4">
+                      <button type="button" class="main_content__agenda-list-btn">
                         <div class="_1p1ero8">
                           <div class="_z6ased">
                             <div>
