--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -743,7 +743,7 @@
                                             class="dir dir-ltr"
                                             id="activity-level-chip-list-DLS-chipGroup-label"
                                           >
-                                            <div class="_1lmb2fq">
+                                            <div class="main_content__schedule-text">
                                               What activity level should people
                                               expect?
                                             </div>
@@ -824,7 +824,7 @@
                                             class="dir dir-ltr"
                                             id="skill-level-chip-list-DLS-chipGroup-label"
                                           >
-                                            <div class="_1lmb2fq">
+                                            <div class="main_content__schedule-text">
                                               What skill level is required?
                                             </div>
                                             <div class="tab__header-desc">
