--- a/edit/photos.html
+++ b/edit/photos.html
@@ -1755,7 +1755,7 @@
                                 style="padding-top: 40px"
                               >
                                 <section>
-                                  <div class="_4gelgl">
+                                  <div class="main_content__details-cancel-button-wrapper">
                                     <div class="flex-content-between">
                                       <h2
                                         tabindex="-1"
@@ -2220,7 +2220,7 @@
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <span class="_1lmb2fq"
+                                    <span class="main_content__schedule-text"
                                       >Your photos must have</span
                                     >
                                   </h2>
