--- a/inbox.html
+++ b/inbox.html
@@ -8944,7 +8944,7 @@
                                     Eggs
                                   </h1>
                                 </div>
-                                <div class="_4gelgl">
+                                <div class="main_content__details-cancel-button-wrapper">
                                   <a
                                     target="_blank"
                                     href="/experiences/3745068"
@@ -8979,7 +8979,7 @@
                                       <a
                                         target="_blank"
                                         href="/users/show/423517614"
-                                        class="_11eqlma4"
+                                        class="main_content__agenda-list-btn"
                                         ><div
                                           class="img-middle"
                                           role="img"
@@ -9014,7 +9014,7 @@
                                       <a
                                         target="_blank"
                                         href="/users/show/465981293"
-                                        class="_11eqlma4"
+                                        class="main_content__agenda-list-btn"
                                         ><div
                                           class="img-middle"
                                           role="img"
