--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -378,7 +378,7 @@
                                                       </div>
                                                       <div class="_37qdzt">
                                                         <div class="_r6zroz">
-                                                          <span class="_4gelgl"
+                                                          <span class="main_content__details-cancel-button-wrapper"
                                                             >MasterCard ••••
                                                             3765</span
                                                           ><span class="main_content__header-current_date_btn_wrapper"
@@ -1126,7 +1126,7 @@
                                                       </div>
                                                       <div class="_37qdzt">
                                                         <div class="_r6zroz">
-                                                          <span class="_4gelgl"
+                                                          <span class="main_content__details-cancel-button-wrapper"
                                                             >MasterCard ••••
                                                             3765</span
                                                           ><span class="main_content__header-current_date_btn_wrapper"
