--- a/products.html
+++ b/products.html
@@ -370,7 +370,7 @@
                                                   >
                                                     <button
                                                       type="button"
-                                                      class="_11eqlma4"
+                                                      class="main_content__agenda-list-btn"
                                                     >
                                                       <div
                                                         class="lite-image"
@@ -436,7 +436,7 @@
                                                     <button
                                                       tabindex="-1"
                                                       type="button"
-                                                      class="_11eqlma4"
+                                                      class="main_content__agenda-list-btn"
                                                     >
                                                       <div
                                                         class="lite-image"
@@ -500,7 +500,7 @@
                                                     <button
                                                       tabindex="-1"
                                                       type="button"
-                                                      class="_11eqlma4"
+                                                      class="main_content__agenda-list-btn"
                                                     >
                                                       <div
                                                         class="lite-image"
@@ -1331,7 +1331,7 @@
                                                     <button
                                                       tabindex="-1"
                                                       type="button"
-                                                      class="_11eqlma4"
+                                                      class="main_content__agenda-list-btn"
                                                     >
                                                       <div
                                                         class="lite-image"
@@ -1461,7 +1461,7 @@
                                                         ><button
                                                           aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                           type="button"
-                                                          class="_11eqlma4"
+                                                          class="main_content__agenda-list-btn"
                                                         >
                                                           134 reviews
                                                         </button></span
@@ -1489,7 +1489,7 @@
                                                     ><span class="_1jvg42j"
                                                       ><button
                                                         type="button"
-                                                        class="_11eqlma4"
+                                                        class="main_content__agenda-list-btn"
                                                       >
                                                         <span
                                                           class="_9xiloll"
@@ -2809,7 +2809,7 @@
                                                       aria-label="Show map"
                                                       aria-describedby="location-disclaimer-tooltip"
                                                       type="button"
-                                                      class="_11eqlma4 hidden block-lg"
+                                                      class="main_content__agenda-list-btn hidden block-lg"
                                                     >
                                                       <div class="_10u42wu">
                                                         <span
@@ -8517,7 +8517,7 @@
                                                         ><button
                                                           aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                           type="button"
-                                                          class="_11eqlma4"
+                                                          class="main_content__agenda-list-btn"
                                                         >
                                                           134 reviews
                                                         </button></span
@@ -8545,7 +8545,7 @@
                                                     ><span class="_1jvg42j"
                                                       ><button
                                                         type="button"
-                                                        class="_11eqlma4"
+                                                        class="main_content__agenda-list-btn"
                                                       >
                                                         <span
                                                           class="_9xiloll"
@@ -9046,7 +9046,7 @@
                                         class="margin__auto-x max__width dir dir-ltr"
                                         style="--maxWidth: 1120px"
                                       >
-                                        <div class="_dmn8hc">
+                                        <div class="main_content__details-button-wrapper">
                                           <div class="display__flex dir dir-ltr">
                                             <div
                                               data-plugin-in-point-id="NAV_DEFAULT"
@@ -16590,7 +16590,7 @@
                                                                       class="flex"
                                                                     >
                                                                       <div
-                                                                        class="_bp34sw"
+                                                                        class="main_content__details-form-language"
                                                                       >
                                                                         <div
                                                                           class="relative"
@@ -16627,14 +16627,14 @@
                                                                           >
                                                                             <label
                                                                               for="GuestPicker-book_it-trigger"
-                                                                              class="_13kgb0p"
+                                                                              class="main_content__details-form-language-label"
                                                                               ><div
                                                                                 class="_7eq2v2"
                                                                               >
                                                                                 Guests
                                                                               </div>
                                                                               <div
-                                                                                class="_1ekxhnk"
+                                                                                class="main_content__details-form-language-value"
                                                                                 id="GuestPicker-book_it-trigger"
                                                                                 aria-invalid="false"
                                                                                 aria-disabled="false"
@@ -17084,7 +17084,7 @@
                                                                       class="flex"
                                                                     >
                                                                       <div
-                                                                        class="_bp34sw"
+                                                                        class="main_content__details-form-language"
                                                                       >
                                                                         <div
                                                                           class="relative"
@@ -17121,14 +17121,14 @@
                                                                           >
                                                                             <label
                                                                               for="GuestPicker-book_it-trigger"
-                                                                              class="_13kgb0p"
+                                                                              class="main_content__details-form-language-label"
                                                                               ><div
                                                                                 class="_7eq2v2"
                                                                               >
                                                                                 Guests
                                                                               </div>
                                                                               <div
-                                                                                class="_1ekxhnk"
+                                                                                class="main_content__details-form-language-value"
                                                                                 id="GuestPicker-book_it-trigger"
                                                                                 aria-invalid="false"
                                                                                 aria-disabled="false"
@@ -17777,7 +17777,7 @@
                                                                       class="flex"
                                                                     >
                                                                       <div
-                                                                        class="_bp34sw"
+                                                                        class="main_content__details-form-language"
                                                                       >
                                                                         <div
                                                                           class="relative"
@@ -17814,14 +17814,14 @@
                                                                           >
                                                                             <label
                                                                               for="GuestPicker-book_it-trigger"
-                                                                              class="_13kgb0p"
+                                                                              class="main_content__details-form-language-label"
                                                                               ><div
                                                                                 class="_7eq2v2"
                                                                               >
                                                                                 Guests
                                                                               </div>
                                                                               <div
-                                                                                class="_1ekxhnk"
+                                                                                class="main_content__details-form-language-value"
                                                                                 id="GuestPicker-book_it-trigger"
                                                                                 aria-invalid="false"
                                                                                 aria-disabled="false"
