--- a/reviews.html
+++ b/reviews.html
@@ -44,7 +44,7 @@
                     <div class="_1v0rfuj">
                       <div class="flex-items-center">
                         <div class="_uvp3p0" data-testid="icon">
-                          <a href="/" class="_11eqlma4"
+                          <a href="/" class="main_content__agenda-list-btn"
                             ><svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -70,7 +70,7 @@
                         >
                       </div>
                       <div class="_1as7kh5l" data-testid="after">
-                        <div class="_4gelgl">
+                        <div class="main_content__details-cancel-button-wrapper">
                           <div class="_14f4nnk hidden d-md-inline-block">
                             <div class="hidden__md">
                               <span class="_10rf6ea"
