--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1495,7 +1495,7 @@
                           <div class="_1htwqzi">
                             <div class="_r8kijh">
                               <div
-                                class="_dmn8hc"
+                                class="main_content__details-button-wrapper"
                                 data-testid="individual_rate_half"
                               >
                                 <div class="_11cjxwv">
@@ -1524,7 +1524,7 @@
                                 </div>
                                 <div class="_1pl2z8b">
                                   <div class="_kzc21">
-                                    <div class="_4gelgl">0 adults</div>
+                                    <div class="main_content__details-cancel-button-wrapper">0 adults</div>
                                     <div class="_ckeeqk">₹17.60 x 0 adults</div>
                                   </div>
                                   <div class="_z73wt8">₹0</div>
@@ -1532,7 +1532,7 @@
                               </div>
                               <hr class="_m7gcmy" />
                               <div
-                                class="_dmn8hc"
+                                class="main_content__details-button-wrapper"
                                 data-testid="individual_rate_max"
                               >
                                 <div class="_11cjxwv">
@@ -1561,7 +1561,7 @@
                                 </div>
                                 <div class="_1pl2z8b">
                                   <div class="_kzc21">
-                                    <div class="_4gelgl">1 adult</div>
+                                    <div class="main_content__details-cancel-button-wrapper">1 adult</div>
                                     <div class="_ckeeqk">₹17.60 x 1 adult</div>
                                   </div>
                                   <div class="_z73wt8">₹18</div>
