--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1339,7 +1339,7 @@
                                     <div class="va-top-h">
                                       <div class="_7i43np">
                                         <span class="_jmgxek"
-                                          ><span class="_4gelgl"
+                                          ><span class="main_content__details-cancel-button-wrapper"
                                             >Allow people to request dates and
                                             times not listed.</span
                                           ></span
