--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1209,7 +1209,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1lmb2fq">
+                                <div class="main_content__schedule-text">
                                   <button
                                     aria-label="Add another item to: What guests need to bring"
                                     data-testid="add-packing-list-item-link"
