--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1175,7 +1175,7 @@
                                 <div class="">
                                   <fieldset class="_25bp3z">
                                     <legend class="_1wjt7fx">
-                                      <div class="_1lmb2fq">
+                                      <div class="main_content__schedule-text">
                                         Does your experience have any
                                         accessibility features? (optional)
                                       </div>
@@ -1323,7 +1323,7 @@
                                     class="dir dir-ltr"
                                     id="activity_level-DLS-chipGroup-label"
                                   >
-                                    <div class="_1lmb2fq">
+                                    <div class="main_content__schedule-text">
                                       What activity level should people expect?
                                     </div>
                                     <div class="tab__header-desc">
@@ -1399,7 +1399,7 @@
                                     class="dir dir-ltr"
                                     id="skill_level-DLS-chipGroup-label"
                                   >
-                                    <div class="_1lmb2fq">
+                                    <div class="main_content__schedule-text">
                                       What skill level is required?
                                     </div>
                                     <div class="tab__header-desc">
