--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1732,7 +1732,7 @@
                                   class="heading"
                                   elementtiming="LCP-target"
                                 >
-                                  <span class="_1lmb2fq"
+                                  <span class="main_content__schedule-text"
                                     >Your photos must have</span
                                   >
                                 </h2>
