--- a/trips.html
+++ b/trips.html
@@ -432,7 +432,7 @@
                                         >
                                           <a
                                             href="specific_trip.html"
-                                            class="_11eqlma4"
+                                            class="main_content__agenda-list-btn"
                                             ><div class="c1gmbq7c dir dir-ltr">
                                               <div class="idybhsv dir dir-ltr">
                                                 <div
@@ -555,7 +555,7 @@
                                         >
                                           <a
                                             href="/trips/v1/0791a7d2-0fcd-41f4-9811-436952babbda/ro/EXPERIENCE_RESERVATION/8408312"
-                                            class="_11eqlma4"
+                                            class="main_content__agenda-list-btn"
                                             ><div class="c1gmbq7c dir dir-ltr">
                                               <div class="idybhsv dir dir-ltr">
                                                 <div
