--- a/calendar.html
+++ b/calendar.html
@@ -289,7 +289,7 @@
                             aria-label="July 1, 2022"
                             aria-expanded="false"
                             type="button"
-                            class="_11eqlma4"
+                            class="main_content__agenda-list-btn"
                           >
                             <div class="main_content__header-current_date">
                               <div class="main_content__header-date--today">July 1, 2022</div>
@@ -1716,14 +1716,14 @@
                 <section
                   data-testid="calendar-sidebar"
                   aria-label="Day details and actions"
-                  class="_4vf6nc"
+                  class="main_content__details"
                 >
                   <div
                     id="calendar-sidebar"
                     aria-labelledby="calendar-sidebar-heading"
                     tabindex="-1"
                     aria-live="off"
-                    class="_dxx2an"
+                    class="main_content__details-wrapper"
                   >
                     <section>
                       <div class="color_black">
