--- a/covidsafety.html
+++ b/covidsafety.html
@@ -134,7 +134,7 @@
                                     <div class="_13rz9t0">
                                       <a
                                         href="/resources/hosting-homes/a/answers-for-travelers-about-covid-19-153"
-                                        class="_11eqlma4"
+                                        class="main_content__agenda-list-btn"
                                         ><div class="_fupbrz">
                                           <div style="margin-bottom: 12px">
                                             <div
@@ -215,7 +215,7 @@
                                     <div class="_13rz9t0">
                                       <a
                                         href="https://apply.joinsherpa.com/travel-restrictions?affiliateid=airbnb"
-                                        class="_11eqlma4"
+                                        class="main_content__agenda-list-btn"
                                         ><div class="_fupbrz">
                                           <div style="margin-bottom: 12px">
                                             <div
@@ -315,7 +315,7 @@
                                     <div class="_13rz9t0">
                                       <a
                                         href="/help/article/2728/cancellation-options-due-to-covid19"
-                                        class="_11eqlma4"
+                                        class="main_content__agenda-list-btn"
                                         ><div class="_fupbrz">
                                           <div style="margin-bottom: 12px">
                                             <div
@@ -395,7 +395,7 @@
                                     <div class="_13rz9t0">
                                       <a
                                         href="/help/article/3043/search-for-more-flexible-cancellation-policies"
-                                        class="_11eqlma4"
+                                        class="main_content__agenda-list-btn"
                                         ><div class="_fupbrz">
                                           <div style="margin-bottom: 12px">
                                             <div
