--- a/help.html
+++ b/help.html
@@ -48,7 +48,7 @@
                             aria-label="Airbnb homepage"
                             data-testid="help-center-header-airbnb-logo"
                             href="/?logo=1"
-                            class="_11eqlma4"
+                            class="main_content__agenda-list-btn"
                             ><svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -124,7 +124,7 @@
                               <button
                                 data-testid="help-center-header-nav-menu-button"
                                 type="button"
-                                class="_11eqlma4"
+                                class="main_content__agenda-list-btn"
                               >
                                 <div class="m15bpvrt dir dir-ltr">
                                   <div class="h189cyzx dir dir-ltr">
@@ -1616,7 +1616,7 @@
                                                                   >
                                                                     <a
                                                                       href="/account-settings/payments/payout-methods"
-                                                                      class="_11eqlma4"
+                                                                      class="main_content__agenda-list-btn"
                                                                       ><div
                                                                         class="_1kbhs46v"
                                                                       >
@@ -1777,7 +1777,7 @@
                                                                   >
                                                                     <a
                                                                       href="/hosting"
-                                                                      class="_11eqlma4"
+                                                                      class="main_content__agenda-list-btn"
                                                                       ><div
                                                                         class="_1kbhs46v"
                                                                       >
@@ -1990,7 +1990,7 @@
                                                           >
                                                             <a
                                                               href="/account-settings/payments/payout-methods"
-                                                              class="_11eqlma4"
+                                                              class="main_content__agenda-list-btn"
                                                               ><div
                                                                 class="_1kbhs46v"
                                                               >
@@ -2122,7 +2122,7 @@
                                                           >
                                                             <a
                                                               href="/hosting"
-                                                              class="_11eqlma4"
+                                                              class="main_content__agenda-list-btn"
                                                               ><div
                                                                 class="_1kbhs46v"
                                                               >
@@ -2282,7 +2282,7 @@
                                                         >
                                                           <a
                                                             href="/account-settings/payments/payout-methods"
-                                                            class="_11eqlma4"
+                                                            class="main_content__agenda-list-btn"
                                                             ><div
                                                               class="_1kbhs46v"
                                                             >
@@ -2413,7 +2413,7 @@
                                                         >
                                                           <a
                                                             href="/hosting"
-                                                            class="_11eqlma4"
+                                                            class="main_content__agenda-list-btn"
                                                             ><div
                                                               class="_1kbhs46v"
                                                             >
