--- a/payment.html
+++ b/payment.html
@@ -814,7 +814,7 @@
                                               style="padding-bottom: 24px"
                                             >
                                               <div>
-                                                <div class="_4gelgl">
+                                                <div class="main_content__details-cancel-button-wrapper">
                                                   <button
                                                     type="button"
                                                     class="tab__on-btn-container"
@@ -856,7 +856,7 @@
                                                   padding-bottom: 24px;
                                                 "
                                               >
-                                                <div class="_4gelgl">
+                                                <div class="main_content__details-cancel-button-wrapper">
                                                   <div class="_ymq6as">
                                                     <div class="page-shell-mobile__lang-icon-currency">
                                                       Cancellation policy
@@ -1287,7 +1287,7 @@
                                                   <div class="tab__content-visibility">
                                                     <div>
                                                       <div>
-                                                        <div class="_dmn8hc">
+                                                        <div class="main_content__details-button-wrapper">
                                                           <div class="_10d7v0r">
                                                             <button
                                                               type="button"
@@ -1312,7 +1312,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_64pbdv">
-                                                        <div class="_dmn8hc">
+                                                        <div class="main_content__details-button-wrapper">
                                                           <div class="_10d7v0r">
                                                             <button
                                                               type="button"
@@ -1338,7 +1338,7 @@
                                                       <div
                                                         class="_jbgt15"
                                                       ></div>
-                                                      <div class="_dmn8hc">
+                                                      <div class="main_content__details-button-wrapper">
                                                         <div class="_1x5uynhu">
                                                           Total
                                                           <button
