--- a/profile.html
+++ b/profile.html
@@ -1066,7 +1066,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               </label>
                                             </div>
                                           </div>
-                                          <div class="_dmn8hc">
+                                          <div class="main_content__details-button-wrapper">
                                             <button
                                               type="button"
                                               class="btn-link"
@@ -1432,7 +1432,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             <div class="_1v365y9">
                                               <div class="_1v8nkzp">
                                                 <div class="_gkkj7s">
-                                                  <div class="_4gelgl">
+                                                  <div class="main_content__details-cancel-button-wrapper">
                                                     <div class="_kb5pe">
                                                       <span tabindex="-1"
                                                         >June 2022</span
@@ -2198,7 +2198,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         </label>
                                       </div>
                                     </div>
-                                    <div class="_dmn8hc">
+                                    <div class="main_content__details-button-wrapper">
                                       <button type="button" class="btn-link">
                                         Cancel</button
                                       ><button
@@ -2581,7 +2581,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       <div class="_1v365y9">
                                         <div class="_1v8nkzp">
                                           <div class="_gkkj7s">
-                                            <div class="_4gelgl">
+                                            <div class="main_content__details-cancel-button-wrapper">
                                               <div class="_kb5pe">
                                                 <span tabindex="-1"
                                                   >June 2022</span
