--- a/reviews-tell-us.html
+++ b/reviews-tell-us.html
@@ -41,7 +41,7 @@
                       <div class="_1v0rfuj">
                         <div class="flex-items-center">
                           <div class="_uvp3p0" data-testid="icon">
-                            <a href="/" class="_11eqlma4"
+                            <a href="/" class="main_content__agenda-list-btn"
                               ><svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
