--- a/specific_trip.html
+++ b/specific_trip.html
@@ -236,7 +236,7 @@
                                     <div class="_5g6li5">
                                       <div class="w-100">
                                         <section>
-                                          <div class="_18tkw86">
+                                          <div class="main_content__details-form-max-group">
                                             <div class="page-container">
                                               <div style="margin: 0px">
                                                 <div class="_1ygqyztr">
@@ -285,7 +285,7 @@
                                                                 <button
                                                                   aria-label="View all photos"
                                                                   type="button"
-                                                                  class="_11eqlma4"
+                                                                  class="main_content__agenda-list-btn"
                                                                 >
                                                                   <div
                                                                     class="img-middle"
@@ -394,7 +394,7 @@
                                                                   aria-hidden="false"
                                                                   aria-label="View all photos"
                                                                   type="button"
-                                                                  class="_11eqlma4"
+                                                                  class="main_content__agenda-list-btn"
                                                                 >
                                                                   <div
                                                                     class="_8m8cat"
@@ -437,7 +437,7 @@
                                                                   aria-label="View all photos"
                                                                   tabindex="-1"
                                                                   type="button"
-                                                                  class="_11eqlma4"
+                                                                  class="main_content__agenda-list-btn"
                                                                 >
                                                                   <div
                                                                     class="img-middle"
@@ -517,7 +517,7 @@
                                                                   aria-label="View all photos"
                                                                   tabindex="-1"
                                                                   type="button"
-                                                                  class="_11eqlma4"
+                                                                  class="main_content__agenda-list-btn"
                                                                 >
                                                                   <div
                                                                     class="img-middle"
@@ -597,7 +597,7 @@
                                                                   aria-label="View all photos"
                                                                   tabindex="-1"
                                                                   type="button"
-                                                                  class="_11eqlma4"
+                                                                  class="main_content__agenda-list-btn"
                                                                 >
                                                                   <div
                                                                     class="img-middle"
