--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1246,7 +1246,7 @@
                             <div class="_1y8yg3n">
                               <fieldset class="_25bp3z">
                                 <legend class="_1wjt7fx">
-                                  <div class="_zjgkr9">
+                                  <div class="main_content__details-form-repeat-sched">
                                     Airbnb partner organization (optional)
                                   </div>
                                 </legend>
