--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1066,7 +1066,7 @@
                             <div class="_v08k6k">
                               <fieldset class="_25bp3z">
                                 <legend class="_1wjt7fx">
-                                  <div class="_zjgkr9">
+                                  <div class="main_content__details-form-repeat-sched">
                                     Choose the theme that best describes what
                                     guests will enjoy.
                                   </div>
