--- a/wishlists.html
+++ b/wishlists.html
@@ -229,7 +229,7 @@
                                 <div class="page-shell-mobile__display-none">
                                   <div id="FMP-target">
                                     <a href="/wishlists/1148602671"
-                                      ><div class="_dmn8hc">
+                                      ><div class="main_content__details-button-wrapper">
                                         <div
                                           id="1148602671"
                                           aria-disabled="false"
@@ -300,7 +300,7 @@
                                   </div>
                                   <div>
                                     <a href="/wishlists/1148604100"
-                                      ><div class="_dmn8hc">
+                                      ><div class="main_content__details-button-wrapper">
                                         <div
                                           id="1148604100"
                                           aria-disabled="false"
@@ -361,7 +361,7 @@
                                   </div>
                                   <div>
                                     <a href="/wishlists/1148603879"
-                                      ><div class="_dmn8hc">
+                                      ><div class="main_content__details-button-wrapper">
                                         <div
                                           id="1148603879"
                                           aria-disabled="false"
@@ -424,7 +424,7 @@
                                   </div>
                                   <div>
                                     <a href="/wishlists/1148603784"
-                                      ><div class="_dmn8hc">
+                                      ><div class="main_content__details-button-wrapper">
                                         <div
                                           id="1148603784"
                                           aria-disabled="false"
@@ -487,7 +487,7 @@
                                   </div>
                                   <div>
                                     <a href="/wishlists/1148603430"
-                                      ><div class="_dmn8hc">
+                                      ><div class="main_content__details-button-wrapper">
                                         <div
                                           id="1148603430"
                                           aria-disabled="false"
